<resources>
    <string name="app_name" translatable="false">Moments</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="but_ok" translatable="false">OK</string>
    <string name="but_cancel">Cancel</string>
    <string name="register">Sign Up</string>
    <string name="my_account">My account</string>
    <string name="signOut">Sign Out</string>
    <string name="mail">E-mail</string>
    <string name="forgottenPassword">Forgot password ?</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="withFacebook" translatable="false">via Facebook</string>
    <string name="withForm">via Form</string>
    <string name="free_way">Free Way</string>
    <string name="moment">Moment</string>
    <string name="stop_mode">Stop Mode</string>
</resources>
